fix: wrong position of button text

--- a/src/components/Button/styles.module.scss
+++ b/src/components/Button/styles.module.scss
@@ -1,7 +1,6 @@
 @import '../../../styles/config/variables';
 
 .button {
-  display: inline-block;
   padding: 1.25rem 2.5rem;
   justify-content: center;
   
